修改部分界面问题

--- a/app/src/main/res/layout/activity_keep_an_account.xml
+++ b/app/src/main/res/layout/activity_keep_an_account.xml
@@ -4,6 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/toolbarColor"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,7 +14,8 @@
         android:layout_height="?actionBarSize">
         <ImageView
             android:id="@+id/expend_income_back"
-            android:background="?selectableItemBackground"
+            android:padding="@dimen/activity_margin"
+            android:src="@drawable/title_back_selector"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -21,7 +23,7 @@
         <RadioGroup
             android:layout_centerInParent="true"
             android:orientation="horizontal"
-            android:background="@drawable/rect_custom_toast_background"
+            android:background="@drawable/edittext_rect_border"
             android:layout_width="wrap_content"
             android:layout_height="32dp">
             <RadioButton
@@ -59,6 +61,11 @@
                 android:layout_height="match_parent" />
         </RadioGroup>
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/lineDividerColor"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_keep_an_accounts"
