--- a/app/src/main/res/layout/layout_type_item.xml
+++ b/app/src/main/res/layout/layout_type_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:background="?selectableItemBackground"
+              android:background="@drawable/item_click_selector"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
         <ImageView
@@ -15,8 +15,8 @@
             android:layout_gravity="center_horizontal"
             android:id="@+id/type_name"
             android:layout_marginTop="@dimen/image_text_margin"
-            android:textSize="@dimen/m_normal_size"
-            android:textColor="@color/gray_color"
+            android:textSize="14sp"
+            android:textColor="@color/toolbarTextColor"
             android:paddingBottom="@dimen/text_padding"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
