--- a/app/src/main/res/layout/layout_choose_user_account.xml
+++ b/app/src/main/res/layout/layout_choose_user_account.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
+    android:background="@drawable/item_click_selector"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/choose_user_account_title"
         android:gravity="center"
         android:text="选择账户"
+        android:textColor="@color/toolbarTextColor"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.3dp"
+        android:background="@color/lineDividerColor"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/choose_user_account_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
 
 </LinearLayout>
