--- a/app/src/main/res/layout/layout_choose_user_account_item.xml
+++ b/app/src/main/res/layout/layout_choose_user_account_item.xml
@@ -1,14 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:background="@drawable/item_click_selector"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/account_title"
+    <LinearLayout
         android:paddingLeft="@dimen/activity_margin"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize" />
+        android:paddingStart="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin"
+        android:paddingEnd="@dimen/activity_margin"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:layout_centerVertical="true"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/account_title"
+            android:textSize="16sp"
+            android:text="支付账户"
+            android:textColor="@color/toolbarTextColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/border_radius"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:text="余额："
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/amount"
+                android:text="12.00"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
 
-</LinearLayout>
+    <CheckBox
+        android:id="@+id/checkbox_choose_account"
+        android:clickable="false"
+        android:background="@android:color/transparent"
+        android:focusableInTouchMode="false"
+        android:layout_marginEnd="@dimen/activity_margin"
+        android:layout_marginRight="@dimen/activity_margin"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <View
+        android:layout_alignParentBottom="true"
+        android:background="@color/lineDividerColor"
+        android:layout_width="wrap_content"
+        android:layout_height="0.3dp"/>
+
+</RelativeLayout>
