--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,10 +17,8 @@
         <attr name="isOpened" format="boolean"/>
     </declare-styleable>
 
-    <style name="bottom_sheet_style" parent="Theme.Design.BottomSheetDialog">
-        <item name="android:windowFullscreen">true</item>
-    </style>
 
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="NumKeyStyle">
         <item name="android:textSize">30sp</item>
