--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,14 @@
     <dimen name="number_key_height">60dp</dimen>
     <dimen name="border_radius">4dp</dimen>
 
+
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="list_item_padding">8dp</dimen>
+
+    <dimen name="fab_margin">16dp</dimen>
+
 </resources>
