--- a/app/src/main/res/layout/activity_add_edit_type.xml
+++ b/app/src/main/res/layout/activity_add_edit_type.xml
@@ -14,11 +14,13 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            app:navigationIcon="@drawable/ic_arrow_white_black_24dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary"
             android:minHeight="?attr/actionBarSize"
-            android:theme="@style/Toolbar"
+            style="@style/Toolbar"
+            app:titleTextColor="@android:color/white"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </android.support.design.widget.AppBarLayout>
 
@@ -33,7 +35,7 @@
             android:layout_height="match_parent" />
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_add_type"
+            android:id="@+id/fab_edit_type_done"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
