--- a/app/src/main/res/layout/fragment_add_edit_type.xml
+++ b/app/src/main/res/layout/fragment_add_edit_type.xml
@@ -77,8 +77,9 @@
     <Button
         android:id="@+id/save_type"
         android:layout_marginTop="@dimen/activity_margin"
+        android:textSize="16sp"
         android:textColor="@android:color/white"
-        android:background="@color/colorPrimary"
+        android:background="@drawable/button_selector"
         android:text="保存"
         android:layout_marginLeft="@dimen/activity_margin"
         android:layout_marginStart="@dimen/activity_margin"
