--- a/app/src/main/res/layout/activity_type_manager.xml
+++ b/app/src/main/res/layout/activity_type_manager.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_add"
+            android:src="@drawable/ic_add_white_24dp"
             app:fabSize="normal"
             app:layout_anchor="@id/contentFrame"
             app:layout_anchorGravity="bottom|right|end" />
