--- a/app/src/main/res/layout/layout_account_header.xml
+++ b/app/src/main/res/layout/layout_account_header.xml
@@ -35,6 +35,7 @@
             android:textColor="@android:color/white"
             android:text="净资产"
             android:textSize="12sp"
+            android:id="@+id/textview1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
@@ -57,6 +58,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:text="资产"
+                android:id="@+id/textview2"
                 android:textSize="12sp"
                 android:layout_marginTop="@dimen/border_radius"
                 android:textColor="@android:color/white"
@@ -76,6 +78,7 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:text="负债"
+                android:id="@+id/textview3"
                 android:textSize="12sp"
                 android:layout_marginTop="@dimen/border_radius"
                 android:textColor="@android:color/white"
