--- a/app/src/main/res/layout/layout_account_item.xml
+++ b/app/src/main/res/layout/layout_account_item.xml
@@ -10,17 +10,11 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="120dp">
-        <TextView
+        <ImageView
             android:layout_marginLeft="@dimen/activity_margin"
             android:layout_marginStart="@dimen/activity_margin"
-            android:paddingTop="@dimen/activity_margin"
-            android:paddingBottom="@dimen/activity_margin"
             android:id="@+id/account_image_title"
-            android:background="@drawable/account_flag_circle"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
             android:layout_centerVertical="true"
-            android:gravity="center"
             android:layout_width="48dp"
             android:layout_height="48dp" />
 
