--- a/app/src/main/res/layout/activity_transfer_accounts.xml
+++ b/app/src/main/res/layout/activity_transfer_accounts.xml
@@ -22,7 +22,18 @@
             android:minHeight="?attr/actionBarSize"
             style="@style/Toolbar"
             app:titleTextColor="@android:color/white"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >
+            <TextView
+                android:id="@+id/transfer_save"
+                android:text="保存"
+                android:layout_marginRight="@dimen/activity_margin"
+                android:layout_marginEnd="@dimen/activity_margin"
+                android:layout_gravity="end"
+                android:padding="@dimen/border_radius"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
 
     <android.support.design.widget.CoordinatorLayout
