--- a/app/src/main/res/layout/fragment_transfer.xml
+++ b/app/src/main/res/layout/fragment_transfer.xml
@@ -1,13 +1,175 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/toolbarColor"
     tools:context="org.lqwit.android.account.transfer.TransferFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:paddingEnd="@dimen/activity_margin"
+        android:paddingRight="@dimen/activity_margin"
+        android:paddingStart="@dimen/activity_margin"
+        android:paddingLeft="@dimen/activity_margin"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="?attr/actionBarSize">
 
-</FrameLayout>
+        <TextView
+            android:textSize="30sp"
+            android:text="-"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <EditText
+            android:id="@+id/transfer_amount"
+            android:paddingStart="@dimen/activity_margin"
+            android:paddingLeft="@dimen/activity_margin"
+            android:inputType="number"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:background="@android:color/transparent"
+            android:layout_height="?attr/actionBarSize" />
+    </LinearLayout>
+    <View
+        android:layout_marginRight="@dimen/activity_margin"
+        android:layout_marginStart="@dimen/activity_margin"
+        android:layout_marginEnd="@dimen/activity_margin"
+        android:layout_marginLeft="@dimen/activity_margin"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
+
+    <LinearLayout
+        android:layout_marginTop="@dimen/activity_margin"
+        android:layout_marginRight="@dimen/activity_margin"
+        android:layout_marginStart="@dimen/activity_margin"
+        android:layout_marginEnd="@dimen/activity_margin"
+        android:layout_marginLeft="@dimen/activity_margin"
+        android:layout_marginBottom="@dimen/activity_margin"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+
+        android:layout_height="90dp">
+
+        <RelativeLayout
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:background="@drawable/account_transfer_rect_shape_in"
+            android:layout_height="match_parent">
+            <TextView
+                android:id="@+id/transfer_account_name_out"
+                android:text="微信"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/transfer_account_balance_out"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:textColor="@android:color/white"
+                android:text="3233"
+                android:textSize="18sp" />
+
+            <TextView
+                android:text="结余"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_above="@id/transfer_account_balance_out"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent" >
+            <TextView
+                android:text="转"
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <ImageView
+                android:src="@drawable/ic_arrow_forward_white_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/transfer_in_layout"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:background="@drawable/account_transfer_rect_shape_out"
+            android:layout_height="match_parent">
+            <TextView
+                android:visibility="visible"
+                android:id="@+id/transfer_tips"
+                android:textColor="@android:color/white"
+                android:layout_centerVertical="true"
+                android:text="选择转入账户"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="微信"
+                android:visibility="gone"
+                android:id="@+id/transfer_account_name_in"
+                android:textSize="16sp"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:visibility="gone"
+                android:id="@+id/transfer_account_balance_in"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:textColor="@android:color/white"
+                android:text="3233"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/transfer_tips2"
+                android:visibility="gone"
+                android:text="结余"
+                android:textColor="@android:color/white"
+                android:textSize="12sp"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_above="@id/transfer_account_balance_in"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/transfer_time"
+        android:paddingRight="@dimen/text_padding"
+        android:paddingEnd="@dimen/text_padding"
+        android:paddingStart="@dimen/text_padding"
+        android:paddingLeft="@dimen/text_padding"
+        android:paddingBottom="@dimen/border_radius"
+        android:paddingTop="@dimen/border_radius"
+        android:layout_marginStart="@dimen/activity_margin"
+        android:layout_marginLeft="@dimen/activity_margin"
+        android:background="@drawable/edittext_rect_border"
+        android:text="11月20日"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
