--- a/app/src/main/res/drawable/keep_account_left_shape_normal.xml
+++ b/app/src/main/res/drawable/keep_account_left_shape_normal.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
     <solid android:color="@color/tabIndicatorLineColor"/>
-    <corners android:bottomLeftRadius="@dimen/border_radius" android:topLeftRadius="@dimen/border_radius"/>
+    <size android:width="72dp" android:height="72dp"/>
 </shape>
